[gd_scene load_steps=13 format=3 uid="uid://be56goflb0lrn"]

[ext_resource type="Script" path="res://Scripts/Components/AttackController.gd" id="1_rov1y"]
[ext_resource type="Texture2D" uid="uid://bnfvinkdkav7x" path="res://Sprites/VFX/transparent.png" id="2_jc8c3"]
[ext_resource type="Texture2D" uid="uid://b743ms4l3csby" path="res://Sprites/VFX/swoosh3/swoosh3f0.png" id="3_74wy4"]
[ext_resource type="Texture2D" uid="uid://dr513ykq2oa67" path="res://Sprites/VFX/swoosh3/swoosh3f1.png" id="4_4kff4"]
[ext_resource type="Texture2D" uid="uid://b7xrn378028ix" path="res://Sprites/VFX/swoosh3/swoosh3f2.png" id="5_3txtf"]
[ext_resource type="Texture2D" uid="uid://blsyymo060ua7" path="res://Sprites/VFX/swoosh3/swoosh3f3.png" id="6_f4olj"]
[ext_resource type="Texture2D" uid="uid://bnw0v5whfp3a2" path="res://Sprites/VFX/swoosh3/swoosh3f4.png" id="7_4rt3d"]
[ext_resource type="Texture2D" uid="uid://duu0dvs8b7j0b" path="res://Sprites/VFX/swoosh3/swoosh3f5.png" id="8_hle4c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dquio"]
size = Vector2(8, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ucnq6"]
size = Vector2(8, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ossgn"]
size = Vector2(22, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_kc6px"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_jc8c3")
}],
"loop": true,
"name": &"NoSwoosh",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_74wy4")
}, {
"duration": 1.0,
"texture": ExtResource("4_4kff4")
}, {
"duration": 1.0,
"texture": ExtResource("5_3txtf")
}, {
"duration": 1.0,
"texture": ExtResource("6_f4olj")
}, {
"duration": 1.0,
"texture": ExtResource("7_4rt3d")
}, {
"duration": 1.0,
"texture": ExtResource("8_hle4c")
}],
"loop": false,
"name": &"Swoosh",
"speed": 30.0
}]

[node name="AttackController" type="Node2D"]
script = ExtResource("1_rov1y")
Damage = null
PushForce = 2000.0
Type = null

[node name="AttackBoxRight" type="Area2D" parent="."]
collision_mask = 6

[node name="AttackBoxShape" type="CollisionShape2D" parent="AttackBoxRight"]
position = Vector2(15, 0)
shape = SubResource("RectangleShape2D_dquio")

[node name="AttackBoxLeft" type="Area2D" parent="."]
collision_mask = 6

[node name="AttackBoxShape" type="CollisionShape2D" parent="AttackBoxLeft"]
position = Vector2(-15, 0)
shape = SubResource("RectangleShape2D_ucnq6")

[node name="AttackBoxUp" type="Area2D" parent="."]
collision_mask = 6

[node name="AttackBoxShape" type="CollisionShape2D" parent="AttackBoxUp"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_ossgn")

[node name="AttackBoxDown" type="Area2D" parent="."]
collision_mask = 6

[node name="AttackBoxShape" type="CollisionShape2D" parent="AttackBoxDown"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_ossgn")

[node name="SwooshRight" type="AnimatedSprite2D" parent="."]
position = Vector2(17, 0)
scale = Vector2(1, -1)
sprite_frames = SubResource("SpriteFrames_kc6px")
animation = &"NoSwoosh"

[node name="SwooshDown" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 18)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_kc6px")

[node name="SwooshLeft" type="AnimatedSprite2D" parent="."]
position = Vector2(-17, 0)
rotation = 3.14159
scale = Vector2(1, -1)
sprite_frames = SubResource("SpriteFrames_kc6px")

[node name="SwooshUp" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -17)
rotation = 4.71239
sprite_frames = SubResource("SpriteFrames_kc6px")
animation = &"NoSwoosh"
